split mining and power into pages, update nav

--- a/_includes/machines/mining/Glass.html
+++ b/_includes/machines/mining/Glass.html
@@ -19,12 +19,21 @@
      </p>
      <p>If purification by centrifuge worked well enough, any regolith feedstock could be used for this process. If it didn't work well enough the first time, repeating it could result in the purity required. Or, once again, selecting regolith from the highlands with a low content of troublesome minerals to begin with could yield a product good for clear glass after the first time through the centrifuge. Or, a centrifuge that presses the molten regolith with greater force could increase purity sufficiently. After all, centrifuges are another thing the Moon is very kind to - no atmospheric drag on the spinning vessels, and making frictionless magnetic bearings is a lot easier in the low gravity. Centrifuges benefit from this the same way flywheels do.
      </p>
-     <p>Freedom to include large quantities of clear glass in lunar architecture is tremendously beneficial. Where glazing uses the radiation blind design, or windows are sunk at the bottom of shafts that eliminate direct sight-lines to the sky, glass can be just a few centimeters thick - say, 3 inches. That is still pretty thick, because it needs to support the pressure of the atmosphere, and that is a lot of force. The glass would need to be made of several laminated panes, to improve strength and prevent failure by shattering. If it can be thicker, then panes can be larger. Glazing means natural sunlight and a view of the sky. If you think it wouldn't bother you to live without either of those things, try it for a few days. A colony must have this, and have it over a sizable area so that everyone can enjoy it as much as they want.
+     <p>Freedom to include large quantities of clear glass in lunar architecture is tremendously beneficial. Where glazing uses the radiation blind design, or windows are sunk at the bottom of shafts that eliminate direct sight-lines to the sky, glass can be just a few centimeters thick - say, 8 cm (3"). That is still pretty thick, because it needs to support the pressure of the atmosphere, and that is a lot of force. The glass would need to be made of several laminated panes, to improve strength and prevent failure by shattering. If it can be thicker, then panes can be larger. Glazing means natural sunlight and a view of the sky. If you think it wouldn't bother you to live without either of those things, try it for a few days. A colony must have this, and have it over a sizable area so that everyone can enjoy it as much as they want.
      </p>
      <p>Both of these processes can be scaled up as much as needed. With the infrastructure assembled to build a large number of giant glass furnaces, plate glass rolling equipment, and associated paraphernalia, Cernan's Promise is able to undertake construction of Lalande City. Such a city would not be possible otherwise.</p>
     </div>
   </div>
 </section>
 <aside>
-
+  <figure class="sideDiv">
+    <img src="img/SchottTechnicalGlass.png" alt="Graph of viscosity vs temperature for 8 glass formulas.">
+    <figcaption>Viscosity vs temperature for a range of technical glasses. <b>1</b> - fused silica, made purely of silica. <b>2</b> - alkaline earth aluminosilicate glass, free of alkali metals (no sodium or potassium). <b>3</b> - similar to 2 but formulated to withstand even higher temperatures, typically used in halogen bulbs. <b>4</b> - borosilicate glass, made of 13% boron oxide, 81% silica, and small amounts of alumina, sodium oxide, and potassium oxide. This is the kind of glass cookware is made of.<b>5</b> - another borosilicate glass with reduced alkali metals and alkaline earths (less calcium and magnesium). <b>6</b> - a third borosilicate glass, unknown chemistry. Appears to be a high boron variety as it softens at a low temperature, these are used as seals, mostly in electrical componenets <b>7</b> - lead glass, 28% lead oxide, absorbs xrays very well. <b>8</b> - glass with very high lead content, used in specialty soldering.<br>From the <a href="http://www.schott.com/d/epackaging/2fbc7180-e37c-4209-9eec-617ad9208e51/1.0/18.11.15_final_schott_technical_glasses_row.pdf">Schott Technical Glass Manual</a>
+    </figcaption>
+  </figure>
+  <figure class="sideDiv">
+    <img src="img/GlassViscosity.png" alt="Graph of viscosity vs temperature for 8 glass formulas.">
+    <figcaption>The viscosities at which glass passes through key states. The curve here is typical of common glass formulas. <br> <a href="http://www.schott.com/d/epackaging/2fbc7180-e37c-4209-9eec-617ad9208e51/1.0/18.11.15_final_schott_technical_glasses_row.pdf">Ibid.</a> above.
+    </figcaption>
+  </figure>
 </aside>
