--- a/_includes/machines/power/Nuclear.html
+++ b/_includes/machines/power/Nuclear.html
@@ -1,6 +1,5 @@
-<div class="container">
 	<section>
-		<div class="outerDiv" id="nuclearReactors">
+		<div class="outerDiv">
 			<div class="innerDiv">
 				<h3>Nuclear Reactors</h3>
 				<p>
@@ -29,4 +28,3 @@
 			</figcaption>
 		</figure>
 	</aside>
-</div>
