--- a/_includes/machines/power/SolarThermal.html
+++ b/_includes/machines/power/SolarThermal.html
@@ -1,8 +1,8 @@
-<div class="container" id="solarThermal">
+
 	<section>
 		<div class="outerDiv">
 			<div class="innerDiv">
-				<h3 id="TESS">Solar Thermal Melt and Power - STeMP units</h3>
+				<h3>Solar Thermal Melt and Power - STeMP units</h3>
 				<p>Once Lalande has a genuine town, and later for the city, generators running on stored solar heat are a significant source of power. They power Stirling engines with a gaseous working fluid, heated by a mass of molten regolith, which in turn is heated by tubes filled with molten sodium that circulate through parabolic mirrors.
 				</p>
 				<p>Chemicals that boil off the lava are collected for use elsewhere. These are chemicals such as oxides of phosphorus, potassium, and sulfur, and minute amounts of hydrogen, carbon, and nitrogen. The plant is sized with extra capacity so that some molten rock can be drawn off and used to produce things like glass and basalt fiber materials. That lava needs to be processed further in most such cases.
