--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -58,31 +58,31 @@
 							<li><a href="machines.html#HangarsOverview">Hangars</a></li>
 						</ul>
 					</li>
-					<li><a href="machines2.html#power">Power</a>
+					<li><a href="machinesPower.html">Power</a>
 						<ul>
-							<li><a href="machines2.html#TESS">Solar Thermal</a></li>
-							<li><a href="machines2.html#nuclearReactors">Nuclear Reactors</a></li>
-							<li><a href="machines2.html#SolarPV">Solar Photovoltaic</a></li>
-							<li><a href="machines2.html#SpaceSolar">Beamed Solar</a></li>
-							<li><a href="machines2.html#flywheels">Flywheels</a></li>
+							<li><a href="machinesPower.html#SolarThermal">Solar Thermal</a></li>
+							<li><a href="machinesPower.htmlNnuclearReactors">Nuclear Reactors</a></li>
+							<li><a href="machinesPower.html#SolarPV">Solar Photovoltaic</a></li>
+							<li><a href="machinesPower.html#SpaceSolar">Beamed Solar</a></li>
+							<li><a href="machinesPower.html#Flywheels">Flywheels</a></li>
 						</ul>
 					</li>
-					<li><a href="machines2.html#mining">Mining</a>
+					<li><a href="machinesMining.html">Mining</a>
 						<ul>
-							<li><a href="machines2.html#Minerals">Minerals</a></li>
-							<li><a href="machines2.html#solarFurnace">Solar Furnace</a></li>
-							<li><a href="machines2.html#solarReactor">Solar Reactor</a></li>
-							<li><a href="machines2.html#moltenElectrolysis">Molten Regolith Electrolysis</a></li>
-							<li><a href="machines2.html#dustRoaster">Deflected Plasmas</a></li>
-							<li><a href="machines2.html#Glass">Glass Production</a></li>
-							<li><a href="machines2.html#Excavation">Excavation</a></li>
+							<li><a href="machinesMining.html#Minerals">Minerals</a></li>
+							<li><a href="machinesMining.html#SolarFurnace">Solar Furnace</a></li>
+							<li><a href="machinesMining.html#SolarReactor">Solar Reactor</a></li>
+							<li><a href="machinesMining.html#MoltenElectrolysis">Molten Regolith Electrolysis</a></li>
+							<li><a href="machinesMining.html#DustRoaster">Deflected Plasmas</a></li>
+							<li><a href="machinesMining.html#Glass">Glass Production</a></li>
+							<li><a href="machinesMining.html#Excavation">Excavation</a></li>
 						</ul>
 					</li>
-					<li><a href="machines2.html#transport">Transport</a>
+					<li><a href="machinesTransport.html">Transport</a>
 						<ul>
-							<li><a href="machines2.html#nuclearShuttles">Nuclear Shuttles</a></li>
-							<li><a href="machines2.html#PodShip">Pod ship</a></li>
-							<li><a href="machines2.html#TetherTransport">Vertical Tethers</a></li>
+							<li><a href="machinesTransport.html#nuclearShuttles">Nuclear Shuttles</a></li>
+							<li><a href="machinesTransport.html#PodShip">Pod ship</a></li>
+							<li><a href="machinesTransport.html#TetherTransport">Vertical Tethers</a></li>
 						</ul>
 					</li>
 				</ul>
