--- a/_includes/transport/transportNuclearShuttles.html
+++ b/_includes/transport/transportNuclearShuttles.html
@@ -1,4 +1,4 @@
-<div class="container" id="nuclearShuttles">
+
 	<section>
 		<div class="outerDiv">
 			<div class="innerDiv">
@@ -23,8 +23,7 @@
 					the rocket nozzles. That speed is what determines how hard the
 					rocket is pushed in the opposite direction by that exhaust.
 					The best chemical rockets have exhaust velocities
-					of 4400 m/s in space, so a nuclear engine speeds up or slows
-					down a ship twice as fast as the best chemical engines we have.
+					of 4400 m/s in space - ones burning hydrogen with oxygen. A nuclear engine would speed up or slow down a ship twice as fast as if the ship had a hydrolox engine with the same thrust.
 				</p>
 				<p>
 					The first lunar missions use Lunar Nuclear Craft (LNCs, pronounced 'links') between the lunar surface and lunar orbit. That involves about 4 km/s of delta V for a round trip before the skyhook is set up. Cargo ships coming to lunar orbit can have larger payloads by handing off their cargo to the shuttle and staying in orbit. The LNCs achieve better performance overall by using a <a href="https://ntrs.nasa.gov/search.jsp?R=20170004744&hterms=lantr+nuclear+thermal&qs=N%3D0%26Ntk%3DAll%26Ntx%3Dmode%2Bmatchallany%26Ntt%3Dlantr%2Bnuclear%2Bthermal">LANTR design</a>. They get thrust by superheating hydrogen, and during launch and landing, can greatly augment that thrust by injecting oxygen into the engine nozzle, basically like an afterburner. A recently developed version of this technology is the <a href="http://www.alternatewars.com/BBOW/Space_Engines/AIAA-2004-3863_TRITON.pdf">Triton engine</a> from Pratt & Whitney. It uses a closed Brayton cycle to also use the reactor as a power source. </p>
@@ -39,4 +38,3 @@
 	</section>
 	<aside>
 	</aside>
-</div>
