--- a/_includes/transport/transportPodShip.html
+++ b/_includes/transport/transportPodShip.html
@@ -1,16 +1,15 @@
 <div class="container" id="PodShip">
-					<section>
-						<div class="outerDiv">
-							<div class="innerDiv">
-								<h3>Pod ship from Low Earth Orbit to Low Lunar Orbit</h3>
-								<p>The pod ship might as well have next-generation hydrolox engines, such as <a href="http://www.rocket.com/common-extensible-cryogenic-engine">Aerojet Rocketdyne CECE engines</a>, which are designed for up to 50 restarts.
-        It will be so large that it would benefit from being assembled in orbit. That type of construction would allow the best overall design, as its shape would be less constrained by the size and shape of rocket fairings. Thus it could have an open, wine-rack sort of shape, with solar panel wings and rocket engines at one end. It may need to be modified after its first trip, as on that trip it takes the nuclear shuttle to the Moon, which will itself be large enough that it couldn't be placed in sectioned cargo bays. After that initial mission, payloads would go on the pod ship in pods designed to slip into bays, a standardized system like container shipping.
-        </p>
-        <p>
-        If the harvesting of water from the poles turns out to be as easy as some data indicates is possible, it could start bringing full loads of water back to the space station in short order, and be fueled from that source. If that task is instead difficult, fuelling from the Moon would only slowly ramp up.
-        </p>
-        <p>This ship is unpiloted. Where autopilot programming is insufficient, remote piloting is done, but this will likely almost never be necessary. If Falcon 9 first stages can manage to land on a barge in rough seas on their own, a pod ship should be able to berth with a tether anchor station on its own.</p>
-        <p>When it is time for crew to go to the Moon, the pod ship can do that too. Cargo pods set up with all the needs of people would be loaded onto it. When transferred to the nuclear shuttle, not much needs change. The shuttle also pilots itself, the main thing would be to configure the pod for best radiation protection.</p>
+	<section>
+		<div class="outerDiv">
+			<div class="innerDiv">
+				<h3>Pod Ships</h3>
+				<p>The pod ships are so named because they haul shipping pods, which are the space equivalent of shipping containers on Earth. They are manufactured in a standard size, with standard specifications for insulation, Whipple shielding (for protection from micrometeoroids), a sliding door, internal structures for storage, and connectors if items need power or a comms connection. Eventually these pods are mass-produced.</p>
+				<p>The initial pod ships have space for 8 short pods or 4 long ones. The pods are attached to the racks on the truss that forms the spine of the pod ship. The nose of the ship has all the ship's systems, a robotic arm, wings of solar panels, and radiator panels. The far end has the fuel tanks and engines. As the timeline proceeds they become ever larger and beefier. Eventually they are phased out when toss ships take over shipping, except for routes between space stations or other facilities that aren't close to a skyhook.
+				</p>
+				<p>The pod ships are assembled in orbit at the timeline's beginning, allowing them to have this shape, and be large enough to haul substantial loads to the Moon. They are not equipped to land anywhere, they are strictly in-space vehicles. They burn hydrogen fuel with oxygen in ordinary chemical engines, so they can be fueled with the water mined on the Moon. They could instead be fitted with nuclear thermal engines like the LNCs, the question would be whether the possibility of a pod ship crash is so remote there is no need to think about a nuclear reactor breaking up on entry to Earth's atmosphere, or about managing radiation when the engines are firing close to the space station in low Earth orbit. The immediate construction of the first skyhook perhaps argues in favor of being conservative and avoiding the use of nuclear reactors near Earth and its space station. Once the skyhook is operational, little fuel is spent getting a fuel payload to lunar orbit, and the pod ships can break lunar orbit on a good trajectory to Earth without spending any fuel at all. The need to pare down fuel use as much as possible thus becomes much less important.
+				</p>
+				<p>When people travel on the pod ships, they do so in habitat pods specially adapted for that. When they arrive at a skyhook or are transferred to another ship, they don't leave the pod. The whole pod is instead disconnected from the pod ship and its robotic arm places it on the skyhook climber or in a rack space on the other ship. This means that the pod ship rarely has to dock in the precise manner ships today must do when arriving at the ISS, it just needs to berth in a space very analogous to a berth for a boat on Earth. Early habitat pods have airlocks which must be mated to a receiving airlock when the people aboard are arriving or departing a destination. Later on, hab pods are received in bays that then are sealed and pressurized with the entire pod inside.
+				</p>
 							</div>
 						</div>
 					</section>
