transport content additions

--- a/_includes/timeline/birthOfWorlds.html
+++ b/_includes/timeline/birthOfWorlds.html
@@ -1,7 +1,7 @@
 <div class="columnSet">
   <article class="spanAll" style="background-color: rgba(30, 40, 60, 0.8)">
     <details id="birthOfWorlds">
-      <summary><h2>The Birth of Worlds</h2></summary>
+      <summary class="column"><h2>The Birth of Worlds</h2></summary>
       <p>As this timeline closes, the slope of the curve is only getting steeper. With skyhooks tossing great ships back and forth and robots swarming outwards, bent on building vast and magical things all across the solar system, humanity's sense of identity has not simply been shifted. It's been challenged.
       </p>
       <p>To appreciate the nature of Moonwards, one must understand that all these things will come to pass before the turn of the century. The details will be different, but the scope will be just like this. It is likely that the 50 year timeline shown here is about the time we have before this is the solar system we live in. Once we pass certain thresholds, the scale of our undertakings will explode in size so dramatically, it falls to us now to carefully contemplate what it really means to be human. That task must be well underway, and a consensus gelling, before we hold the power in our hands that this future will bestow upon us.
