--- a/sass/_blocks-objects.sass
+++ b/sass/_blocks-objects.sass
@@ -176,6 +176,16 @@ div .gallery
   line-height: 1.1rem
   text-align: right
 
+details
+  box-sizing: border-box
+  margin-left: 2%
+
+summary
+  color: $headingColor
+  font-weight: 600
+  background-color: $tabBkgd
+  margin-bottom: 12px
+
 .columnSet
   +display(flex)
   +flex-flow(column nowrap)
