more skyhook content

--- a/_includes/machines/machinesBuilding.html
+++ b/_includes/machines/machinesBuilding.html
@@ -150,7 +150,7 @@
 </div>
 	<div>
 		<div class="SF-Div">
-			On to <a href="machines2.html">Power, Mining, and Transport</a>
+			On to <a href="machinesPower.html">Power</a> - <a href="machinesMining.html"> Mining</a> - and <a href="machinesTransport">Transport</a>
 		</div>
 	</div>
 </section>
