--- a/_includes/machines/mining/solarFurnace.html
+++ b/_includes/machines/mining/solarFurnace.html
@@ -10,11 +10,7 @@
      </p>
      <p>This sort of separation is known to happen on Earth in magma chambers (see sidebar). If this approach was experimented with to see if other types of separation can be done this way, more such techniques might be found. Though the results might not be very pure, it could still yield minerals with desirable properties. Or, the technique could be repeated one or more times to improve purity. Production of transparent glass in bulk could be made much easier by development of this technique, as discussed under Glass Production.
      </p>
-     <figure class="pix">
-       <img src="img/volatileContent.jpg" alt="volatile elements in regolith at ppm levels - hydrogen, carbon, nitrogen, sulfur, fluorine, clorine, helium, and neon. Argon, krypton, and xenon are present at parts per billion levels." title="volatile elements in regolith at ppm levels - hydrogen, carbon, nitrogen, sulfur, fluorine, clorine, helium, and neon. Argon, krypton, and xenon are present at parts per billion levels.">
-       <figcaption>From <a href="http://www.uapress.arizona.edu/onlinebks/ResourcesNearEarthSpace/resources15.pdf">Lunar Volatiles: Implications for Lunar Resource Utilization</a> by Bruce Fegley. The 'estimated inventory' column is an estimate of the content of each element in the top 3 meters of the regolith. As the document itself notes, these are extremely rough estimates.
-       </figcaption>
-     </figure>
+
     </div>
   </div>
 </section>
@@ -22,6 +18,11 @@
   <figure class="sideDiv">
     <img src="img/magma-chamber2.png" alt="diagram showing how crystals of olivine settle in the bottom of magma chambers, where they are reheated and melt again. The top of the melt becomes more felsic, and the bottom more mafic.">
     <figcaption>How olivine crystals form at the top of a magma chamber, where temperatures are lower, and then sink to the bottom of the chamber. From <a href="https://opentextbc.ca/geology/chapter/3-3-crystallization-of-magma/">Opentext BC's geology texbook</a>.
+    </figcaption>
+  </figure>
+  <figure class="sideDiv">
+    <img src="img/volatileContent.jpg" alt="volatile elements in regolith at ppm levels - hydrogen, carbon, nitrogen, sulfur, fluorine, clorine, helium, and neon. Argon, krypton, and xenon are present at parts per billion levels." title="volatile elements in regolith at ppm levels - hydrogen, carbon, nitrogen, sulfur, fluorine, clorine, helium, and neon. Argon, krypton, and xenon are present at parts per billion levels.">
+    <figcaption>From <a href="http://www.uapress.arizona.edu/onlinebks/ResourcesNearEarthSpace/resources15.pdf">Lunar Volatiles: Implications for Lunar Resource Utilization</a> by Bruce Fegley. The 'estimated inventory' column is an estimate of the content of each element in the top 3 meters of the regolith. As the document itself notes, these are extremely rough estimates.
     </figcaption>
   </figure>
 </aside>
