--- a/_includes/transport/tethers/AsteroidAnchors.html
+++ b/_includes/transport/tethers/AsteroidAnchors.html
@@ -2,40 +2,11 @@
 		<div class="outerDiv">
 			<div class="innerDiv">
 				<h3>Asteroid Anchors</h3>
-				<p>
-					To get a good anchor for the tether, an asteroid retrieval mission
-					along the lines of the Keck mission architecture
-					would be needed. To get something worthwhile, the virtual colony
-					version beefs it up by a factor of 10, meaning an asteroid massing about
-					7500 metric tons. A nice one full
-					of carbon chemicals, pure metals, and hydrated minerals. That one
-					goes into a polar orbit. With it, the small initial polar colony
-					could go anywhere on the Moon every two weeks, and could lauch to
-					Earth that frequently too.
+				<p>The first skyhook built in lunar orbit gets its anchor mass from material slowly lifted from the surface over many trips. More payload will be heading down the tethers to the surface than will be heading from the surface to go back to Earth. Ships arrive from Earth infrequently enough that the time necessary to balance loads is available. Still, to allow the anchor to be built up as quickly as possible, it is worth putting a large set of high-efficiency engines at the skyhook tip (most likely VASIMR or Neumann drives) and running them pretty much all the time, so whenever they are free the shuttles can bring loads of regolith to the foot, which get ferried up and added to the anchor.
 				</p>
-        <p>How close the foot of the tether can safely be to the surface mostly depends on the size of the anchor mass. The larger it is relative to the shuttles, the less the tether foot dips down when a shuttle is docked to the foot platform. The mass of loaded cable cars is also something to consider. The calculations on these orbital perturbations remain to be done, so for now the foot height is set at 50 km. A healthy margin in this regard is definitely needed, but perhaps it can be lowered more. It makes a big difference to the amount of fuel needed to safely land.</p>
-				<p>
-					One of the great things about combining asteroid retrieval with
-					tethers, is that it makes mining the asteroid so much easier. Most
-					of the delta v needed to get the products to a place where they can
-					be used is looked after by the tether. The colony can send machinery
-					to do the mining and run it from the surface. As material is
-					removed from the asteroid for use in the colony, they can replace the
-					mass with lunar material. In fact, they can replace it partly with
-					modules and gear they've made for a space station. An asteroid
-					mining business and a lunar colony would make great partners.
+				<p>Once asteroids are being brought into lunar orbit for study and then for mining, their mass is added to the anchors and that increases anchor mass much more quickly. After the first two skyhooks, most of them get their anchor mass entirely from asteroid material. In the Earth-Moon system, asteroid mining, skyhook development, and space settlement all benefit each other.
 				</p>
-				<p>
-					Once an asteroid has been placed in orbit this way, it is a lot
-					easier to do the same thing again. The full design for the Moon is
-					four tethers in staggered polar orbits and one in equatorial orbit.
-					The polar tethers would make any point on the Moon accessible every
-					3.5 days, and the equatorial tether could launch to Earth, or
-					anywhere else, twice a day. The equatorial tether would be much easier for
-					any ship from Earth (or Mars, or the asteroid belt, or anywhere) to
-					dock with than the polar tethers, requiring a plane-change of
-					a few degrees at most and a much greater range of possible
-					trajectories.
+				<p>The skyhook's orbits are made far more stable by the addition of asteroids to their anchor masses. The presence of skyhooks allows machinery to be delivered to them, and products to be shipped from them, for a fraction of the fuel normally required. The ships that go retrieve the asteroids can be in the ideal place to launch fast and at high speed when new targets are detected, and such detection is aided by placing telescopes devoted to the search on skyhook tips. Teleoperation of equipment proceeds more efficiently because the skyhooks allow the colonies to be home to lots of people, meaning operators have to deal with only a very brief signal delay because they are close by - some are actually on stations built into the anchors. Industry in space is aided by how the skyhooks make the price of shipping high volumes of material between the surface and orbit. So, materials more easily obtained and refined on the Moon, like aluminum and titanium, can be obtained there, and materials better acquired from asteroids, like carbon, can be obtained from them.
 				</p>
 			</div>
 		</div>
